style: Signup page restyling. Note: Not responsive yet. Also includes verify fix

--- a/transcribe/data/css/parts/bootstrap-override.css
+++ b/transcribe/data/css/parts/bootstrap-override.css
@@ -102,7 +102,8 @@ svg {
 
 .form-control:not(#code),
 .filter-option-inner-inner{
-    font-size: .8rem !IMPORTANT;
+    /* font-size: .8rem !IMPORTANT; */
+    font-size: 1rem!IMPORTANT;
 }
 
 .form-control:focus {
